--- a/ST10395938_POEPart2/Views/Shared/_Layout.cshtml
+++ b/ST10395938_POEPart2/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Manager" asp-action="Index">Manager</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Home</a>
+                        </li>
                     </ul>
                 </div>
             </div>
